-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1, 5.5.0
-
-
3ea04c7d388a1790ff3eda9c67f1e224df48e5aa
With OS X 10.10 if the Qt.WindowTransparentForInput flag is set for ApplicationWindow the mouse click events don't go through to the underlaying window.
Use attached test application to reproduce the issue.
The issue doesn't exist on Linux at least.
- relates to
-
QTBUG-61836 [REG 5.6-5.9] OSX Qt.WindowTransparentForInput doesn't let mouse clicks go through the ApplicationWindow
-
- Open
-
For Gerrit Dashboard: QTBUG-45498 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
126140,2 | Cocoa: Support Qt::WindowTransparentForInput | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |